--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+bot.name=MyScheduleProdBot
+bot.token=6702646523:AAHiBlrRO4t1BY9kfwKvAGoa9Oir1ElpUE4
+bot.owner=712909082
 
+spring.datasource.url=jdbc:mysql://localhost:3306/bot_diary?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.main.allow-circular-references=true
