--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 bot.name=MyScheduleProdBot
-bot.token=6702646523:AAHiBlrRO4t1BY9kfwKvAGoa9Oir1ElpUE4
-bot.owner=712909082
+bot.token=---------
+bot.owner=---------
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bot_diary?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/bot_diary?serverTimezone=Europe/Kyiv
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
