--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 bot.name=MyScheduleProdBot
-bot.token=---------
-bot.owner=---------
+bot.token=6702646523:AAHiBlrRO4t1BY9kfwKvAGoa9Oir1ElpUE4
+bot.owner=712909082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bot_diary?serverTimezone=Europe/Kyiv
 spring.datasource.username=root
