Adding_an_administrator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
  spring.main.allow-circular-references=true
+
+
+
+spring.main.allow-bean-definition-overriding=true
