--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ bot.name=MyScheduleProdBot
 bot.token=6702646523:AAHiBlrRO4t1BY9kfwKvAGoa9Oir1ElpUE4
 bot.owner=712909082
 
+admin.chat.id=712909082
+
 spring.datasource.url=jdbc:mysql://localhost:3306/bot_diary?serverTimezone=Europe/Kyiv
 spring.datasource.username=root
 spring.datasource.password=root
@@ -9,9 +11,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=8081
 
- spring.main.allow-circular-references=true
-
-
+spring.main.allow-circular-references=true
 
 spring.main.allow-bean-definition-overriding=true
