--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ server.port=8081
 spring.main.allow-circular-references=true
 
 spring.main.allow-bean-definition-overriding=true
+
+custom.rest.connection.timeout=10000
+custom.rest.read.timeout=30000
