--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,14 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.flyway.baseline-on-migrate=true
+
 server.port=8081
 
 spring.main.allow-circular-references=true
-
 spring.main.allow-bean-definition-overriding=true
 
 custom.rest.connection.timeout=10000
-custom.rest.read.timeout=30000
+custom.rest.read.timeout=5000
+
+spring.quartz.job-store-type=memory
