--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 bot.name=MyScheduleProdBot
-bot.token=6702646523:AAHiBlrRO4t1BY9kfwKvAGoa9Oir1ElpUE4
+bot.token=**************
 bot.owner=712909082
 
 admin.chat.id=712909082
